# RAG_for_RA

./: .gitignore  README.md  env.example  pyproject.toml  requirements.txt
artifacts/chat_logs/: chat-20260106-173831-388535.md  chat-20260106-174656-461040.md  chat-20260106-180239-623966.md  rag_test_results.md
rag_for_ra/: __init__.py  arcgis.py  bulk_upload_jsonl.py  chat.py  create_vector_store.py  documents.py  estimate_cost.py  http.py  ingest_arcgis.py  ingest_dataset_full.py  ingest_ogc.py  io.py  list_vector_store_files.py  ogc.py  openai_utils.py  prepare_pilot_file.py  state.py  sync_api_to_openai.py  upload_to_vector_store.py  vector_store_status.py
